# casper-dao

backend/: index.js  server.js
backend/my-indexer/: .gitignore  db.js  index.js  package-lock.json  package.json  votes.db  watcher.js
backend/my-indexer/keys/: secret_key.pem  secret_key_public.pem
contract/casper_dao/: Cargo.toml  call_init.js  call_token_balance.cjs  check_deploy.js  create_and_vote.cjs  create_and_vote_proposal.cjs  create_proposal.js  deploy.js  deploy_token.js  deploy_wrapper.js  init_v2.cjs  init_v2.js  inspect_keys.cjs  inspect_token.js  mint_token.js  package-lock.json  package.json  run_init_direct.js  rust-toolchain.toml  test_dao.js  transfer_token.js
contract/casper_dao/src/: main.rs
contract/casper_dao/wrapper/: Cargo.toml
contract/casper_dao/wrapper/src/: lib.rs
frontend/: .env.production  .gitignore  index.html  package-lock.json  package.json  postcss.config.cjs  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx  test.rs
frontend/src/component/: ActiveDaos.jsx  DaoDashboard.jsx  Faucet.jsx  Footer.jsx  ProposalCard.jsx  ProposalResults.js  ProposalResults.jsx
frontend/src/context/: CasperContext.jsx
frontend/src/page/: Contacts.jsx  CreateDAO.jsx  CreateProposal.jsx  DaoDetailPage.jsx  LandingPage.jsx  Products.jsx  Resources.jsx
frontend/src/utils/: casperService.js
