[package]
name = "token_wrapper"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
casper-contract = "5.1.1"
casper-types = "6.0.1"
base64ct = { version = "=1.6.0", features = ["alloc"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
